# classi_face_cation

./: CMakeLists.txt  alexnet.cpp  alexnet.cpp.autosave  alexnet.h  clfc.hpp  customdataset.cpp  customdataset.hpp  main.cpp  nets.cpp  nets.hpp
Feature Request/: main.cpp  main3.cpp  main4.cpp
Nets/: CMakeLists.txt  customdataset.hpp  main.cpp  nets.cpp  nets.hpp
